ingresses/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - vod-madhav.site
      secretName: echo-tls-6m6bq
  rules:
    - host: vod-madhav.site
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vod-service
                port:
                  number: 80
  ingressClassName: nginx
